--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -12,8 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Deploy to Heroku Action
-      uses: kw214/heroku-deploy@v1.0.1
+    - name: Deploy to Heroku
+      uses: AkhileshNS/heroku-deploy@v3.12.13
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_email: ${{secrets.HEROKU_EMAIL}}
